--- a/config/language/de/node.type.icms_news.yml
+++ b/config/language/de/node.type.icms_news.yml
@@ -1,5 +1,5 @@
-name: 'News Artikel'
-description: 'Verwende <em>News Articles</em>, um themenbezogene Beiträge mit individuellem Veröffentlichungsdatum, Lesezeit, Taxonomie-Tags und ICMS-Layout-Komponenten zu erstellen.'
+name: 'News'
+description: 'Verwende <em>News</em>, um zeitbezogene Meldungen mit individuellem Veröffentlichungsdatum, Taxonomie-Tags und ICMS-Layout-Komponenten zu erstellen.'
 third_party_settings:
   node_title_help_text:
     title_help: 'Haupttitel der Seite. Wird für Meta-Daten, Menüeintrag und die Anzeige im Backend verwendet, sofern diese an den entsprechenden Stellen nicht überschrieben werden.'
